--- a/src/components/code/code-js/pages/elem-code-string.html
+++ b/src/components/code/code-js/pages/elem-code-string.html
@@ -12,12 +12,13 @@
   <div>
     <p><a href="#links">links</a></p>
     <p><a href="#string">string</a></p>
+    <p><a href="#properties">Свойства строк</a></p>
     <p><a href="#methods">Методы строк</a></p>
   </div>
 
 </div>
 
-<!-- links-->
+<!-- links -->
 <article class="article">
   <div class="anchor" id="links"></div>
   <h2>links</h2>
@@ -29,7 +30,7 @@
   <p><a href="https://metanit.com/web/javascript/6.1.php">metanit.com</a></p>
 </article>
 
-<!-- string-->
+<!-- string -->
 <article class="article">
   <div class="anchor" id="string"></div>
   <h2>Строка (тип данных string) в Javascript</h2>
@@ -105,27 +106,16 @@
   <br>str = str.toUpperCase(); // 'FRONTEND'</code>
 </article>
 
+<!-- Свойства строк -->
 <article class="article">
+  <div class="anchor" id="properties"></div>
   <h3>8. Свойства строк</h3>
   <p>Строки имеют только одно свойство - length.</p>
-
-  <table>
-    <tr>
-      <td>1</td>
-      <th>constructor</th>
-      <td>Возвращает функцию конструктор строки <strong>function String() { [native code] }</strong></td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <th>length</th>
-      <td>Возвращает количество символов в строке</td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <th>prototype</th>
-      <td>Возвращает ссылку на объект String.prototype. Позволяет добавлять новые свойства и методы к объекту String().</td>
-    </tr>
-  </table>
+  <ol>
+    <li><strong>constructor</strong>. Возвращает функцию конструктор строки <strong>function String() { [native code] }</strong></li>
+    <li><strong>length</strong>. Возвращает количество символов в строке</li>
+    <li><strong>prototype</strong>. Возвращает ссылку на объект String.prototype. Позволяет добавлять новые свойства и методы к объекту String()</li>
+  </ol>
 </article>
 
 <article class="article">
@@ -162,6 +152,7 @@
   <p><em>(Появился в <strong>ES1</strong>)</em></p>
   <p>Ссылка на объект String.prototype</p>
 </article>
+
 
 <!-- Методы строк-->
 <article class="article">
