--- a/src/components/code/code-js/pages/elem-code-xhr.html
+++ b/src/components/code/code-js/pages/elem-code-xhr.html
@@ -1,4 +1,4 @@
-<h1>XMLHttpRequest</h1>
+<h1>Объект XMLHttpRequest</h1>
 
 <article class="article">
   <p>XMLHttpRequest – это встроенный в браузер объект, который даёт возможность делать HTTP-запросы к серверу без перезагрузки страницы. XMLHttpRequest имеет два режима работы: синхронный и асинхронный.</p>
