--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -56,7 +56,10 @@
     <li><a href="rs-test/rs-test-final.html" class="js-rs-test">Final test stage#1</a> (91 из 100)</li>
     <hr>
     <li><a href="rs-test/rs-test-tsbasics.html" class="js-rs-test">[St2] TypeScript Basics</a> (88 из 100)</li>
-    <li><a href="rs-test/rs-test-tsadvanced.html" class="js-rs-test">[St2] TypeScript Advanced</a> (0 из 100)</li>
+    <li><a href="rs-test/rs-test-tsadvanced.html" class="js-rs-test">[St2] TypeScript Advanced</a> (85 из 100)</li>
+    <hr>
+    <li><a href="rs-test/rs-test-codereview.html" class="js-rs-test">[St2] Code-Review</a> (82 из 100)</li>
+    <li><a href="rs-test/rs-test-spa.html" class="js-rs-test">[St2] Single Page Application</a> (88 из 100)</li>
   </ol>
 </article>
 
