--- a/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
@@ -179,6 +179,107 @@
 </article>
 
 
+<!-- Week 4 -->
+<article class="article">
+  <div class="anchor" id="week4"></div>
+  <h3>Неделя #4 (5 марта 2024)</h3>
+  <ul>
+    <li>Modules:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/web-storage">Module: Web Storage</a>
+        </li>
+      </ul>
+    </li>
+    <li>Tasks:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/tasks/puzzle">RSS Puzzle</a>
+        </li>
+     </ul>
+    </li>
+    <li>Tests:
+      <ul>
+        <li>[St2] Web Storage</li>
+      </ul>
+    </li>
+  </ul>
+</article>
+
+
+<!-- Week 5 -->
+<article class="article">
+  <div class="anchor" id="week5"></div>
+  <h3>Неделя #5 (12 марта 2024)</h3>
+  <ul>
+    <li>Modules:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/fp-basics">Module: "Functional Programming Basics"</a>
+        </li>
+      </ul>
+    </li>
+    <li>Tasks:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/tasks/puzzle">RSS Puzzle</a>
+        </li>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/codewars/Codewars-2022Q1-FP.md">Codewars FP</a>
+        </li>
+     </ul>
+    </li>
+    <li>Tests:
+      <ul>
+        <li>[St2] Functional Programming</li>
+      </ul>
+    </li>
+  </ul>
+</article>
+
+
+<!-- Week 6 -->
+<article class="article">
+  <div class="anchor" id="week6"></div>
+  <h3>Неделя #6 (19 марта 2024)</h3>
+  <ul>
+    <li>Cross-Check Reviews:
+      <ul>
+        <li>Cross-check of the RSS Puzzle</li>
+      </ul>
+    </li>
+    <li>Modules:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/async">Module: Async programming</a>
+        </li>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/web-security">Module: Web Security</a>
+        </li>
+      </ul>
+    </li>
+    <li>Tasks:
+      <ul>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md">CoreJS Interview #1</a>
+        </li>
+        <li>
+          <a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/tasks/async-race">Project Async Race</a>
+        </li>
+     </ul>
+    </li>
+    <li>Tests:
+      <ul>
+        <li>[St2] Async programming</li>
+        <li>[St2] Web Security</li>
+        <li>core-js-promises</li>
+        <li>core-js-functions</li>
+      </ul>
+    </li>
+  </ul>
+</article>
+
+
 <!-- video -->
 <article class="article">
   <div class="anchor" id="video"></div>
