--- a/src/components/front/front-edu/pages/rs-test/rs-test-tsbasics.html
+++ b/src/components/front/front-edu/pages/rs-test/rs-test-tsbasics.html
@@ -108,7 +108,7 @@
 
 
 <article class="article">
-  <h3>In the expression 'let someVar: any = "hello"; test = 23;'</h3>
+  <h3>11. In the expression 'let someVar: any = "hello"; test = 23;'</h3>
   <ul>
     <li><strong>No error will occur</strong></li>
     <li>There will be an error because the type is not specified in the second expression</li>
@@ -119,7 +119,7 @@
 
 
 <article class="article">
-  <h3>In the expression 'let test: any = "hello"; test = 23;'</h3>
+  <h3>12. In the expression 'let test: any = "hello"; test = 23;'</h3>
   <ul>
     <li>There will be an error because the type is not specified in the first expression.</li>
     <li>There will be an error because the type is not specified in the second expression.</li>
@@ -130,7 +130,7 @@
 
 
 <article class="article">
-  <h3>11. In the expression 'let test: string = "hello world"; test = 23;'</h3>
+  <h3>13. In the expression 'let test: string = "hello world"; test = 23;'</h3>
   <ul>
     <li>No error will occur.</li>
     <li>There will be an error because the type is not specified in the second expression.</li>
@@ -141,7 +141,7 @@
 
 
 <article class="article">
-  <h3>12. In TypeScript, what is the default visibility modifier for class members?</h3>
+  <h3>14. In TypeScript, what is the default visibility modifier for class members?</h3>
   <ul>
     <li><strong>public</strong></li>
     <li>private</li>
@@ -152,7 +152,7 @@
 
 
 <article class="article">
-  <h3>13. In TypeScript, which syntax is used to declare a variable that can be either a 'number' or a 'string'?</h3>
+  <h3>15. In TypeScript, which syntax is used to declare a variable that can be either a 'number' or a 'string'?</h3>
   <ul>
     <li>Types cannot be combined in TS.</li>
     <li>number && string</li>
@@ -164,7 +164,7 @@
 
 
 <article class="article">
-  <h3>14. Is it possible to combine two or more other types to form a combined type representing values that may be any one of those initial types?</h3>
+  <h3>16. Is it possible to combine two or more other types to form a combined type representing values that may be any one of those initial types?</h3>
   <ul>
     <li><strong>Yes, it is called a union.</strong></li>
     <li>Yes, it is called an onion.</li>
@@ -175,7 +175,7 @@
 
 
 <article class="article">
-  <h3>15. Is the function call func('1','2') valid for the function function func(a: number, b: number){ ...some code... }?</h3>
+  <h3>17. Is the function call func('1','2') valid for the function function func(a: number, b: number){ ...some code... }?</h3>
   <ul>
     <li>The call is valid, there will be no error.</li>
     <li>The call is incorrect, but there will be no error.</li>
@@ -185,7 +185,7 @@
 
 
 <article class="article">
-  <h3>16. Select the type for let person = ["Alan", 20]; (checkbox)</h3>
+  <h3>18. Select the type for let person = ["Alan", 20]; (checkbox)</h3>
   <ul>
     <li>It is impossible to write a type for this structure</li>
     <li>number[ ]</li>
@@ -199,7 +199,7 @@
 
 
 <article class="article">
-  <h3>17. Select types in TS: (checkbox)</h3>
+  <h3>19. Select types in TS: (checkbox)</h3>
   <ul>
     <li>int</li>
     <li><strong>string</strong></li>
@@ -215,7 +215,7 @@
 
 
 <article class="article">
-  <h3>18. Valid syntax in TS: (checkbox)</h3>
+  <h3>20. Valid syntax in TS: (checkbox)</h3>
   <ul>
     <li><strong>let test = "hello world";</strong></li>
     <li><strong>let test: string = "hello world";</strong></li>
@@ -227,7 +227,7 @@
 
 
 <article class="article">
-  <h3>19. What distinguishes type aliases from interfaces in TypeScript?</h3>
+  <h3>21. What distinguishes type aliases from interfaces in TypeScript?</h3>
   <ul>
     <li>Type aliases are extendable, while interfaces are not.</li>
     <li><strong>Type aliases cannot be re-opened to add new properties, while interfaces can.</strong></li>
@@ -238,7 +238,7 @@
 
 
 <article class="article">
-  <h3>20. What does the function type expression (a: string) => void mean in TypeScript?</h3>
+  <h3>22. What does the function type expression (a: string) => void mean in TypeScript?</h3>
   <ul>
     <li><strong>A function with one parameter named "a" of type string, returning void.</strong></li>
     <li>A function with one parameter named "string" of type any.</li>
@@ -249,7 +249,7 @@
 
 
 <article class="article">
-  <h3>21. What does the keyof operator do?</h3>
+  <h3>23. What does the keyof operator do?</h3>
   <ul>
     <li>It takes an array and produces a union of its elements.</li>
     <li><strong>It takes an object type and produces a union of its keys.</strong></li>
@@ -260,7 +260,7 @@
 
 
 <article class="article">
-  <h3>What does the question mark (?) signify when used in TypeScript object types?</h3>
+  <h3>24. What does the question mark (?) signify when used in TypeScript object types?</h3>
   <ul>
     <li>The property is required.</li>
     <li><strong>The property is optional.</strong></li>
@@ -271,7 +271,7 @@
 
 
 <article class="article">
-  <h3>22. What does the postfix ! operator do in TypeScript?</h3>
+  <h3>25. What does the postfix ! operator do in TypeScript?</h3>
   <ul>
     <li>It negates a boolean value.</li>
     <li><strong>It asserts that a value isn't null or undefined.</strong></li>
@@ -282,7 +282,7 @@
 
 
 <article class="article">
-  <h3>23. What is a limitation of const assertions?</h3>
+  <h3>26. What is a limitation of const assertions?</h3>
   <ul>
     <li>They can only be applied to complex literal expressions.</li>
     <li>Const contexts immediately convert expressions to be fully immutable.</li>
@@ -293,7 +293,7 @@
 
 
 <article class="article">
-  <h3>What is 'as' in TS?</h3>
+  <h3>27. What is 'as' in TS?</h3>
   <ul>
     <li><strong>It is a type assertion, a way to specify to the compiler which type (previously declared) the variable will have.</strong></li>
     <li>It is a way to combine types and assign a different type (not previously defined) to a variable during compilation forcibly.</li>
@@ -304,7 +304,7 @@
 
 
 <article class="article">
-  <h3>What is the main advantage of the new unknown top type introduced in TypeScript 3.0?</h3>
+  <h3>28. What is the main advantage of the new unknown top type introduced in TypeScript 3.0?</h3>
   <ul>
     <li>It absorbs everything in a union type.</li>
     <li>It allows operations without type assertion or narrowing.</li>
@@ -315,7 +315,7 @@
 
 
 <article class="article">
-  <h3>24. What is the purpose of intersection types in TypeScript?</h3>
+  <h3>29. What is the purpose of intersection types in TypeScript?</h3>
   <ul>
     <li><strong>To create new types by extending existing types using the & operator.</strong></li>
     <li>To define the relationship between interfaces and objects.</li>
@@ -326,7 +326,7 @@
 
 
 <article class="article">
-  <h3>What is the type called for the structure: let person: [string, number] = ["Alan", 20];</h3>
+  <h3>30. What is the type called for the structure: let person: [string, number] = ["Alan", 20];</h3>
   <ul>
     <li>Readonly Array</li>
     <li>Enum</li>
@@ -337,7 +337,7 @@
 
 
 <article class="article">
-  <h3>25. What is the value of C in enum One {A = 1,B = 5,C,D = 0}?</h3>
+  <h3>31. What is the value of C in enum One {A = 1,B = 5,C,D = 0}?</h3>
   <ul>
     <li>3</li>
     <li>undefined</li>
@@ -349,7 +349,7 @@
 
 
 <article class="article">
-  <h3>What types of functions can be written in TS? (checkbox)</h3>
+  <h3>32. What types of functions can be written in TS? (checkbox)</h3>
   <ul>
     <li><strong>function declaration</strong></li>
     <li><strong>function expression</strong></li>
@@ -359,7 +359,7 @@
 
 
 <article class="article">
-  <h3>26. What values can the type-checking operator return? (checkbox)</h3>
+  <h3>33. What values can the type-checking operator return? (checkbox)</h3>
   <ul>
     <li><strong>symbol</strong></li>
     <li><strong>number</strong></li>
@@ -374,7 +374,7 @@
 
 
 <article class="article">
-  <h3>27. When deciding between type aliases and interfaces, what is recommended to use?</h3>
+  <h3>34. When deciding between type aliases and interfaces, what is recommended to use?</h3>
   <ul>
     <li><strong>Always use type aliases for better performance.</strong></li>
     <li>Use type for simple structures and interfaces for complex structures.</li>
@@ -385,7 +385,7 @@
 
 
 <article class="article">
-  <h3>28. When working with class constructors in TypeScript, what is a key difference between function signatures and constructor signatures?</h3>
+  <h3>35. When working with class constructors in TypeScript, what is a key difference between function signatures and constructor signatures?</h3>
   <ul>
     <li>Constructors can have type parameters, unlike functions</li>
     <li>Constructors can have return type annotations, unlike functions</li>
@@ -396,7 +396,7 @@
 
 
 <article class="article">
-  <h3>Which enum declaration is correct? (checkbox)</h3>
+  <h3>36. Which enum declaration is correct? (checkbox)</h3>
   <ul>
     <li><strong>enum Month { Jan, Feb, Mar, Apr }</strong></li>
     <li><strong>enum Month { Jan=1, Feb=2, Mar=3, Apr=5 }</strong></li>
@@ -411,7 +411,7 @@
 
 
 <article class="article">
-  <h3>29. Which of the following are correct ways to perform type assertions in TypeScript? (checkbox)</h3>
+  <h3>37. Which of the following are correct ways to perform type assertions in TypeScript? (checkbox)</h3>
   <ul>
     <li><strong>const myCanvas = document.getElementById("main_canvas") as HTMLCanvasElement;</strong></li>
     <li><strong>const myCanvas = &lt;HTMLCanvasElement&gt;document.getElementById("main_canvas");</strong></li>
@@ -422,7 +422,7 @@
 
 
 <article class="article">
-  <h3>Which of the following syntax options is valid for const assertions in TypeScript?</h3>
+  <h3>38. Which of the following syntax options is valid for const assertions in TypeScript?</h3>
   <ul>
     <li>let x = "hello" &lt;const&gt;;</li>
     <li><strong>let y = [10, 20] as const;</strong></li>
@@ -433,7 +433,7 @@
 
 
 <article class="article">
-  <h3>30. Which type corresponds to the array let arr = [1, 2, 3];? (checkbox)</h3>
+  <h3>39. Which type corresponds to the array let arr = [1, 2, 3];? (checkbox)</h3>
   <ul>
     <li><strong>number[ ]</strong></li>
     <li>string[ ]</li>
@@ -445,7 +445,7 @@
 
 
 <article class="article">
-  <h3>31. Which type corresponds to the array let arr = [1, 2, 3]; where the elements cannot be modified?</h3>
+  <h3>40. Which type corresponds to the array let arr = [1, 2, 3]; where the elements cannot be modified?</h3>
   <ul>
     <li><strong>ReadonlyArray&lt;number&gt;</strong></li>
     <li>ReadonlyArray&lt;string&gt;</li>
@@ -457,7 +457,7 @@
 
 
 <article class="article">
-  <h3>32. Which TypeScript strictness flag makes TypeScript issue an error on variables implicitly inferred as 'any'?</h3>
+  <h3>41. Which TypeScript strictness flag makes TypeScript issue an error on variables implicitly inferred as 'any'?</h3>
   <ul>
     <li>strictNullChecks</li>
     <li><strong>noImplicitAny</strong></li>
@@ -469,7 +469,7 @@
 
 
 <article class="article">
-  <h3>33. With strictNullChecks turned on in TypeScript, what is the behavior when a value is null or undefined?</h3>
+  <h3>42. With strictNullChecks turned on in TypeScript, what is the behavior when a value is null or undefined?</h3>
   <ul>
     <li>Values can be accessed normally without any issues</li>
     <li>Null and undefined can be assigned to a property of any type.</li>
