--- a/src/components/front/front-node/pages/elem-node-eslint.html
+++ b/src/components/front/front-node/pages/elem-node-eslint.html
@@ -36,7 +36,7 @@
   <p><a href="https://eslint.org/">https://eslint.org/</a></p>
   <p><a href="https://www.npmjs.com/package/eslint">https://www.npmjs.com/package/eslint</a></p>
   <p><a href="https://github.com/eslint/eslint">https://github.com/eslint/eslint</a></p>
-    
+
   <h3>Статьи на habr</h3>
   <p><a href="https://habr.com/ru/companies/domclick/articles/743384/">ESLint. Анатомия правил линтинга: разбираем структуру, создаём собственное правило для React-приложения (Anastasia Puchnina 2023-06-23)</a></p>
   <p><a href="https://habr.com/ru/articles/758954/">Повышаем продуктивность разработки: магия общей ESLint конфигурации (Dmitrii Pashkevich 2023-09-05)</a></p>
@@ -49,39 +49,15 @@
   <h2>install</h2>
 
   <ol>
-    <li>Проверим версии установленных node.js и npm
-      <code>
-        node -v
-        <br>v16.17.0
-        <br>npm -v
-        <br>8.15.0
-      </code>
-      если их нет, то поставить с оффициального сайта <a href="https://nodejs.org/en/">nodejs</a>
-    </li>
-    <li>Установим глобально eslint и eslint-config-airbnb
-      <code>npm i -g eslint eslint-config-airbnb</code>
-    </li>
-    <li>Создадим папку для нашего проекта и перейдем в нее
-      <code>
-        mkdir project1
-        <br>cd project1
-        <br>d://project1/
-      </code>
-    </li>
-    <li>Инициализируем проект<code>npm init -y</code>(сокращенно от npm init --yes, то же что и npm init, не отвечая
-      на вопросы)</li>
-    <li>В итоге в папке с проектом появится файл package.json. После этого можно устанавливать пакеты, которые будут
-      являться зависимостями для нашего приложения.<code>d://project1/package.json</code></li>
     <li>Установим в наш проект локально как зависимости для разработки eslint и eslint-config-airbnb
       <code>npm i -D eslint eslint-config-airbnb</code>
     </li>
     <li>Появится папка node_modules, файл package-lock.json, а в файл package.json добавятся зависимости
-      <code>
-        "devDependencies": {
-        <br>&nbsp;&nbsp;"eslint": "^8.49.0",
-        <br>&nbsp;&nbsp;"eslint-config-airbnb": "^19.0.4",
-        <br>}
-      </code>
+<pre>
+"devDependencies": {
+  "eslint": "^8.49.0",
+  "eslint-config-airbnb": "^19.0.4",
+}</pre>
     </li>
     <li>Создадим файл .eslintrc.js в котором будут настройки для eslint
       <code>touch .eslintrc.js</code>
